# order-predictor

./: README.md
API/: pyproject.toml
API/src/prediction_algorithim/: generate_tickers.py  llama_api.py  model_api.py  parser.py  prediction_api.py  requirements.txt  server.py  stock_data.py  upload.py
ui/order-predictor/: components.json  index.html  package-lock.json  package.json
ui/order-predictor/src/: App.css  App.jsx  App.tsx  GeneratedPage.jsx  InfoCard.jsx  Instructions.jsx  index.css
