[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
[project]
name = "prediction_algorithim"
version = "0.0.1"
authors = [
  { name="kl5391", email="kl5391@rit.edu" },
]
description = "prediction of potential tickers using llama model and submitted csv data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/kl5391/order-predictor"